--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rehacktor</title>
 
-    <link href="/src/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="font-roboto">
     <div id="root"></div>
 
     
